# 2022_2_cash_map

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
client/: .gitignore  CMakeLists.txt  README.txt  main.cpp
client/include/: auth.hpp  event.hpp  lib.hpp  sync.hpp  videowatcher.h  videowatcher.hpp
client/include/UI/: Base.h  ChatMessageWidget.h  CustomWebView.h  LoadingWidget.h  LoginWidget.h  RegisterWidget.h  RoomWidget.h  RutubeWatcher.h  SearchListWidgetItem.h  VideoWatcherEventHandler.h  WatchUpApp.h  YoutubeWatcher.h
client/include/domain/: AppAutorizationManager.h  MainWidgetManager.h  RoomChatManager.h  VideoRoomManager.h  YoutubeItemCollector.h
client/include/domain/interface/: AuthorizationManager.h  ChatManager.h  RoomManager.h  SearchItemCollector.h
client/include/domain/models/: AppUser.h  TextMessage.h  VideoRoom.h  VideoRoomMember.h  YoutubeSearchItem.h
client/include/domain/models/interface/: Message.h  Room.h  RoomMember.h  SearchItem.h  User.h
client/include/network/: NetworkManager.h  Serializer.h  Session.h  WatchUpServerClient.h
client/src/: client.cpp  lib.cpp  videowatcher.cpp
client/src/UI/: Base.cpp  ChatMessageWidget.cpp  ChatMessageWidget.h  CustomWebView.cpp  LoadingWidget.cpp  LoginWidget.cpp  RegisterWidget.cpp  RegistrationWidget.cpp  RegistrationWidget.h  RoomWidget.cpp  RutubeWatcher.cpp  SearchListWidgetItem.cpp  VideoWatcherEventHandler.cpp  WatchUpApp.cpp  YoutubeWatcher.cpp  chatmessagewidget.ui  registrationwidget.ui
client/src/domain/: AppAuthorizationManager.cpp  MainWidgetManager.cpp  RoomChatManager.cpp  VideoRoomManager.cpp  YoutubeItemCollector.cpp
client/src/domain/models/: AppUser.cpp  TextMessage.cpp  VideoRoom.cpp  VideoRoomMember.cpp  YoutubeSearchItem.cpp
client/src/network/: NetworkManager.cpp  WatchUpServerCient.cpp
client/static/: resources.qrc
client/static/ui/: SearchListWidgetItem.ui  base.ui  chatmessagewidget.ui  loadingwidget.ui  registerwidget.ui  roomwidget.ui  startwidget.ui  watchupapp.ui
client/tests/: CMakeLists.txt  test.cpp  test_auth.cpp  test_event.cpp  test_utils.cpp
client/tests/videowatcher_tests/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
scripts/: build.sh  build_image.sh  coverage.sh  run_linters.sh  run_tests.sh
server/: CMakeLists.txt  README.txt  main.cpp
server/DB_client/: CMakeLists.txt
server/DB_client/include/: DB.h
server/DB_client/src/: DB.cpp
server/api/: CMakeLists.txt
server/api/chat/: CMakeLists.txt
server/api/chat/include/: chat.h
server/api/isession/: session.cpp  session.h
server/api/response/: response_creator.hpp
server/api/room/: CMakeLists.txt
server/api/room/include/: room.h  room_creator.hpp
server/api/room/src/: room.cpp
server/api/user/: CMakeLists.txt
server/api/user/include/: us_types.hpp  user.h  user_creator.h  user_session.h
server/api/user/src/: user_session.cpp
server/api/viewer/: CMakeLists.txt
server/api/viewer/include/: handler.h  response_creator.hpp  types.hpp  viewer.h  viewer_creator.hpp  viewer_manager.hpp  vs_types.hpp
server/api/viewer/src/: viewer.cpp  viewer_manager.cpp
server/api/ws_session/: CMakeLists.txt
server/api/ws_session/include/: ps_types.hpp  ws_session.hpp
server/api/ws_session/src/: ws_session.cpp
server/core/: CMakeLists.txt
server/core/include/: listener.h  server.h  shared_state.h  ws_session.hpp
server/core/src/: listener.cpp  server.cpp  shared_state.cpp  ws_session.cpp
server/include/: lib.hpp  listener.h  room.h  serializer.h  shared_state.h  types.hpp  viewer.h  ws_session.hpp
server/lib/: CMakeLists.txt
server/lib/response/: CMakeLists.txt
server/lib/response/include/: response_creator.hpp
server/lib/response/src/: response_creator.cpp
server/lib/serializer/: CMakeLists.txt  serializer.h
server/lib/serializer/include/: serializer.h
server/lib/serializer/src/: serializer.cpp
server/src/: lib.cpp  room.cpp  server.cpp  shared_state.cpp  ws_session.cpp
server/tests/: CMakeLists.txt  test.cpp
server/uml/: uml_server
uml/: client_part.drawio
